--- a/www/index.html
+++ b/www/index.html
@@ -3,18 +3,12 @@
 <head>
   <meta charset="UTF-8"/>
   <link rel="stylesheet" href="styles.css"/>
-  <title>PAI-Lab-10</title>
+  <title>PAI-Lab-10</title>  
 </head>
-<body>
+<body>  
   <h1> Index </h1>
-  <p> <a href="/code/class-clock/doc/clock.js.html">01- Clase Clock</a></p>
-  <p> <a href="/code/class-complejo/doc/complejo.js.html">02- Clase Complejo</a></p>
-  <p> <a href="/code/class-vector3d/doc/vector3d.js.html">03- Clase Vector3D</a></p>
-  <p> </p>
-  <p> <a href="/code/clock/doc/clocks.js.html">04- Programa cliente para clase Clock</a></p>
-  <p> <a href="/code/complejos/doc/complejos.js.html">05- Programa cliente para clase Complejo</a></p>
-  <p> <a href="/code/vectores/doc/vectores.js.html">06- Programa cliente para clase Vector3D</a></p>
-  <p> </p>
-  <p> <a href="/code/queen-attack/doc/queen-attack.js.html">07- Queen attack (Exercism)</a></p>
+  <p> <a href="/code/class-complejo/doc/complejo.js.html">01- Clase Complejo</a></p>
+  <p> <a href="/code/mandelbrot/doc/mandelbrot.js.html">02- Clase Mandelbrot</a></p>
+  <p> <a href="/www/carrazana-roberto-mandelbrot.html"> Visualización (Mandelbrot)</a></p>
 </body>
 </html>
